examples/errors/bad_target.al
main :: proc () {
	67676 = "today is a good day"
}
